--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
         }
         .Lcorn2{
-            border: 0.5px solid;
+            border: 0.1px ridge;
+            background-color: white;
             width: 404px;
             height: 704px;
             position: absolute;
@@ -30,7 +31,7 @@
             top: 11.5px;
         }
         .Top{
-            border: 0.5px solid;
+            border: 0.1px ridge;
             width: 1060.5px;
             height: 70px;
             position: absolute;
@@ -42,7 +43,7 @@
             margin-left:10px;
         }
         .Main{
-            border:0.5px solid;
+            border: 0.1px ridge;
             height: 590px;
             width: 1059.5px;
             position: absolute;
@@ -52,7 +53,7 @@
             overflow-y: scroll;
         } 
         .BSrch{
-            border: 0.5px solid;
+            background-color: white;
             width: 1059.5px;
             height: 40px;
             position: absolute;
@@ -101,7 +102,7 @@
             left: 9px;
         }
         .TopS{
-            border: 0.5px solid;
+            background-color: white;
             width: 404px;
             height: 81px;
             border-radius: 10px;
@@ -109,7 +110,6 @@
             top: 0px;
         }
         .People{
-            border: 0.5px solid;
             width: 404px;
             height: 625px;
             overflow-y: scroll;
@@ -146,7 +146,6 @@
             left: 280px;
         }
         .P1{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -154,7 +153,6 @@
             left: 0px;
         }
         .P2{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -162,7 +160,6 @@
             left: 0px;
         }
         .P3{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -170,7 +167,6 @@
             left: 0px;
         }
         .P4{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -178,7 +174,6 @@
             left: 0px;
         }
         .P5{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -186,7 +181,6 @@
             left: 0px;
         }
         .P6{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -194,7 +188,6 @@
             left: 0px;
         }
         .P7{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -202,7 +195,6 @@
             left: 0px;
         }
         .P8{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -210,7 +202,6 @@
             left: 0px;
         }
         .P9{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -218,7 +209,6 @@
             left: 0px;
         }
         .P10{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -226,7 +216,6 @@
             left: 0px;
         }
         .P11{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
@@ -234,7 +223,6 @@
             left: 0px;
         }
         .P12{
-            border: 0.5px solid;
             width: 385px;
             height: 55px;
             position: absolute;
